--- a/animations.html
+++ b/animations.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            display: grid;
-            place-items: center;
-            min-height: 100vh;
+<head>00vh;
         }
         .btn{
             width: 150px;
